# reevo_VRP

./: .gitignore  O-README.md  README.md  README_CN.md  evo_hgs.txt  evo_hgs_res.txt  main.py  notes.txt  pyproject.toml  reevo.py  selective_route_exchange.cpp  vrpb_evo_hgs.txt  vrpl_evo_hgs.txt  vrptw_evo_hgs.txt
baselines/ael/: ga.py
baselines/eoh/: problem_adapter.py
cfg/: config.yaml
cfg/llm_client/: local.yaml  openai.yaml
cfg/problem/: cvrp_hgs.yaml  ovrp_hgs.yaml  ovrptw_hgs.yaml  vrpb_hgs.yaml  vrpl_hgs.yaml  vrptw_hgs.yaml
data/: README.md  config.yaml
data/utils/: __init__.py  generate_data.py  solve_reference_ortools.py  solve_reference_pyvrp.py  utils.py
data/utils/envs/: CVRPEnv.py  OVRPBEnv.py  OVRPBLEnv.py  OVRPBLTWEnv.py  OVRPBTWEnv.py  OVRPEnv.py  OVRPLEnv.py  OVRPLTWEnv.py  OVRPTWEnv.py  VRPBEnv.py  VRPBLEnv.py  VRPBLTWEnv.py  VRPBTWEnv.py  VRPLEnv.py  VRPLTWEnv.py  VRPTWEnv.py
docs/notes/26MAR/: evo_hgs.txt  evo_hgs_res.txt
docs/notes/27MAR/: notes.txt  ovrp_evo_hgs.txt  ovrptw_evo_hgs.txt  pyvrp.txt  vrpb_evo_hgs.txt  vrptw_evo_hgs.txt
problems/: __init__.py
problems/cvrp_hgs/: __init__.py  anti_plagiarism.py  eval.py  reevo_hgs.py
problems/hgs_share/: __init__.py
problems/ovrp_hgs/: __init__.py  eval.py  test_eval.py
problems/ovrptw_hgs/: __init__.py  eval.py  test_eval.py
problems/vrpb_hgs/: __init__.py  code_extraction.py  eval.py
problems/vrpl_hgs/: __init__.py  eval.py
problems/vrptw_hgs/: __init__.py  eval.py  test_eval.py
prompts/cvrp_hgs/: external_knowledge.txt  func_desc.txt  seed_func.txt
prompts/cvrp_hgs/utils/: mutation.txt
prompts/hgs_common/: seed.txt  system_generator.txt  user_generator.txt  user_reflector_st.txt
prompts/ovrp_hgs/: external_knowledge.txt  func_desc.txt
prompts/ovrptw_hgs/: external_knowledge.txt  func_desc.txt  func_signature.txt
prompts/vrpb_hgs/: external_knowledge.txt  func_desc.txt  seed_func.txt
prompts/vrpb_hgs/utils/: crossover.txt
prompts/vrpl_hgs/: external_knowledge.txt  func_desc.txt
prompts/vrptw_hgs/: external_knowledge.txt  func_desc.txt
utils/: README.md  start_local_vllm.sh  utils.py
utils/pyvrp_rep/: meson.build  pyproject.toml
utils/pyvrp_rep/build-py312/: .gitkeep
utils/pyvrp_rep/pyvrp/: read.py
utils/pyvrp_rep/pyvrp/cpp/crossover/: selective_route_exchange.cpp  selective_route_exchange_candidate.cpp  srex_plugin_bindings.cpp
utils/pyvrp_rep/pyvrp/crossover/: selective_route_exchange.py
