[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reevo"
version = "0.1.0"
description = "ReEvo: Large Language Models as Hyper-Heuristics with Reflective Evolution"
authors = [
    { name = "Haoran Ye", email = "hrye@stu.pku.edu.cn"},
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.86.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.13.0",
    "apache-tvm-ffi==0.1.9",
    "astor==0.8.1",
    "attrs==26.1.0",
    "blake3==1.0.8",
    "cachetools==7.0.5",
    "cbor2==5.9.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "colorlog==6.10.1",
    "compressed-tensors==0.13.0",
    "contourpy==1.3.3",
    "cryptography==46.0.6",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.5.0",
    "cuda-python==12.9.4",
    "cycler==0.12.1",
    "depyf==0.20.0",
    "dill==0.4.1",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docblock==0.1.8",
    "docstring_parser==0.17.0",
    "einops==0.8.2",
    "email-validator==2.3.0",
    "fastapi==0.135.2",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.15.0",
    "fastar==0.9.0",
    "filelock==3.25.2",
    "flashinfer-python==0.6.6",
    "fonttools==4.62.1",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "gguf==0.18.0",
    "googleapis-common-protos==1.73.0",
    "grpcio==1.78.0",
    "h11==0.16.0",
    "hf-xet==1.4.2",
    "htmlmin==0.1.12",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface_hub==0.36.2",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3.2",
    "idna==3.11",
    "ijson==3.5.0",
    "importlib_metadata==8.7.1",
    "interegular==0.3.3",
    "Jinja2==3.1.6",
    "jiter==0.13.0",
    "jmespath==1.1.0",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.5.0",
    "lark==1.2.2",
    "llguidance==1.3.0",
    "llvmlite==0.44.0",
    "litellm==1.82.6",
    "lm-format-enforcer==0.11.3",
    "loguru==0.7.3",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.8",
    "mcp==1.26.0",
    "mdurl==0.1.2",
    "meson==1.10.2",
    "mistral_common==1.10.0",
    "model-hosting-container-standards==0.1.14",
    "mpmath==1.3.0",
    "msgspec==0.20.0",
    "multidict==6.7.1",
    "networkx==3.6.1",
    "ninja==1.13.0",
    "numba==0.61.2",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cudnn-frontend==1.18.0",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-cutlass-dsl==4.4.2",
    "nvidia-cutlass-dsl-libs-base==4.4.2",
    "nvidia-ml-py==13.595.45",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.4.5",
    "nvidia-nvtx-cu12==12.8.90",
    "omegaconf==2.3.0",
    "openai==2.24.0",
    "openai-harmony==0.0.8",
    "opencv-python-headless==4.13.0.92",
    "opentelemetry-api==1.40.0",
    "opentelemetry-exporter-otlp==1.40.0",
    "opentelemetry-exporter-otlp-proto-common==1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.0",
    "opentelemetry-exporter-otlp-proto-http==1.40.0",
    "opentelemetry-proto==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-semantic-conventions==0.61b0",
    "opentelemetry-semantic-conventions-ai==0.5.0",
    "ortools==9.10.4067",
    "outlines_core==0.2.11",
    "packaging==26.0",
    "partial-json-parser==0.2.1.1.post7",
    "pillow==12.1.1",
    "pip==26.0.1",
    "prometheus-fastapi-instrumentator==7.1.0",
    "prometheus_client==0.24.1",
    "propcache==0.4.1",
    "protobuf==6.33.6",
    "psutil==7.2.2",
    "py-cpuinfo==9.0.0",
    "pybase64==1.4.3",
    "pybind11==2.13.6",
    "pycountry==26.2.16",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.13.1",
    "pydantic_core==2.41.5",
    "Pygments==2.19.2",
    "PyJWT==2.12.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-json-logger==4.0.0",
    "python-multipart==0.0.22",
    "pytest==9.0.2",
    "pytz==2026.1.post1",
    "PyYAML==6.0.3",
    "pyzmq==27.1.0",
    "quack-kernels==0.3.6",
    "referencing==0.37.0",
    "regex==2026.2.28",
    "requests==2.33.0",
    "rich==14.3.3",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "rpds-py==0.30.0",
    "safetensors==0.7.0",
    "scipy==1.17.1",
    "sentencepiece==0.2.1",
    "sentry-sdk==2.56.0",
    "setproctitle==1.3.7",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sse-starlette==3.3.3",
    "starlette==0.52.1",
    "supervisor==4.3.0",
    "sympy==1.14.0",
    "tabulate==0.10.0",
    "tiktoken==0.12.0",
    "tokenizers==0.22.2",
    "torch==2.10.0",
    "torch_c_dlpack_ext==0.1.5",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "tqdm==4.67.3",
    "transformers==4.57.6",
    "triton==3.6.0",
    "typer==0.24.1",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3",
    "uvicorn==0.42.0",
    "uvloop==0.22.1",
    "vllm==0.18.0",
    "vrplib==2.1.0",
    "watchfiles==1.1.1",
    "websockets==16.0",
    "xgrammar==0.1.32",
    "yarl==1.23.0",
    "zipp==3.23.0",
]

[tool.ruff]
select = ["F", "E", "W", "I001"]
line-length = 90
show-fixes = false
target-version = "py312"
task-tags = ["TODO", "FIXME"]
ignore = ["E501"] # never enforce `E501` (line length violations), done in Black

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.isort]
known-first-party = []
known-third-party = []
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true
split-on-trailing-comma = false
lines-between-types = 1

[tool.black]
line-length = 90
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.direnv
    | \.eggs
    | \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | venv
  )/
)
'''

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Lines to exclude from coverage report (e.g., comments, debug statements)
    "pragma: no cover",
    "if **name** == .__main__.:",
]
